# AntonBin

./: .gitignore  Dockerfile  docker-compose.yaml  setup.cfg
Docker/backend/: Dockerfile
Docker/frontend/: Dockerfile
backend/website/: __init__.py  __main__.py  users.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  routes.js
frontend/src/components/: AboutPage.tsx  Footer.js  HomePage.tsx  LoginPage.js  Navbar.js  Navbar.jsx  Post.tsx  PostForm.tsx  PostList.tsx  RegisterPage.js
