[metadata]
name = Paket_AntonBin
description = Paket for the "AntonBin" project

[options]
packages = find_namespace:
include_package_data = True
zip_safe = False

install_requires =
    starlette
    uvicorn

testing =
    setuptools
    pytest

[options.packages.find]
where = .
exclude =
    venv*
    frontend*